[package]
name = "create-idempotent"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
pinocchio = "0.11.1"
pinocchio-system = "0.6.1"
pinocchio-token = "0.6.0"
pinocchio-token-2022 = { git = "https://github.com/anza-xyz/pinocchio", branch = "main", package = "pinocchio-token-2022" }

[dev-dependencies]
mollusk-svm = "0.13.1"
mollusk-svm-bencher = "0.13.1"
mollusk-svm-programs-token = "0.13.1"
mollusk-svm-result = "0.13.1"
solana-account = "3.4.0"
solana-address = "2.6.0"
solana-instruction = "3.3.0"
solana-program-error = "3.0.0"
solana-program-option = "3.1.0"
solana-program-pack = "3.1.0"
solana-rent = "4.1.0"
solana-system-interface = "3.1.0"
spl-token-2022-interface = "3.0.1"
spl-token-interface = "2.0.0"

[[bench]]
name = "compute_units"
harness = false
